--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,14 +9,21 @@
     "preview": "vite preview",
     "start": "vite"
   },
-  "keywords": ["react", "resend", "email", "frontend", "vite"],
+  "keywords": [
+    "react",
+    "resend",
+    "email",
+    "frontend",
+    "vite"
+  ],
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "axios": "^1.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "axios": "^1.6.2",
-    "react-hot-toast": "^2.4.1"
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
